Fixes uneven position for login and register forms

--- a/public/custom.css
+++ b/public/custom.css
@@ -89,6 +89,7 @@ form {
 
 .col-md-6 {
   width: 40%;
+  align-self: flex-start;
 }
 
 .formContainer,
